kubernetes/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: qn-office
  labels:
    name: qn-office
