kubernetes/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: office-ingress
  namespace: qn-office
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: prod-office.nccquynhon.edu.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: office-frontend
            port:
              number: 80
